gccida/c2/force_not_mem
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_not_mem/src/explow.c:1242:21: error: use of undeclared identifier 'machine_mode'
v3 = gen_reg_rtx( ( machine_mode)BYTE2( v2)); 
                    ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_not_mem/src/obj/explow.o] Error 1
